Fix DTS install, server startups. Flags on locales.